displayed with the specified Password Font. In addition, you can now zoom
in and out of the Notes field, for easy reading of texts.
[3455436] The password history can now be deleted for all existing entries
in a database at once (optionally including Protected Entries).
[3421963] Multiple Password Policies can now be defined, managed and
selected in entries to generate passwords.

Changes to Existing Features in 3.28
====================================
[3445820] The Edit menu item and entry right-click context menu item "Copy Run Command to
Clipboard" will now substitute any variables within the command. This can
be disabled by holding down the Ctrl key when selecting these menu
items. (Note that the standard menu shortcut can't be used to disable, as
the Ctrl key may be used to select a different menu item/command.)
[] As mentioned in the V3.26 release, the XML representation of date/time
fields, are now in the W3C dateTime standard format instead of PasswordSafe's. This release
no longer supports import of XML files with date time fields in the old PasswordSafe's format.
See the online Help (the XML section of "Import Password Entries") if you
need to manually convert old XML files.
[] After closing the current database, on opening another, PasswordSafe will first
attempt to access the directory of the last opened database in order to allow the user
to start browsing for their intended database.  If this directory is not available,
PasswordSafe will open the default "My Safes" directory as it did prior to this change.
[] Databases are now always validated when opened. The Manage->Validate
menu item has therefore been removed.
[] The default backup policy has been changed to save the last three
versions of the database, instead of one. 
[] The graphic symbols for entries, groups, etc. have been redone, as most
displays now support more than 256 colors.

Bugs fixed in 3.28
==================
[3486960] Rename of a group is now complete even if a filter is active.